tests/semantica/valid/asignacion/test3.ctds
program 
    {
        integer foo(){
            return 2;
        }

        void main(){
            integer x = 0;
            x = foo();
        }
    }