tests/semantica/invalid/metodos/test3.ctds
program
	{
		integer x = 0;
		
		integer foo(){
			return x;
		}

		void main(){
			foo(2);
		}
	}